# NetworkManagerGui

./: CMakeLists.txt  main.cpp  org.example.NetworkManagerGUI.desktop  org.example.NetworkManagerGUI.metainfo.xml
